--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,11 @@
 
 
   <section class="coloured-section" id="title">
+    <div class="container">
     <img class="img-fluid" src="{{ url_for('static', filename='images/oscorp-hospital.png') }}"/>
-                <!-- <button class="btn btn-outline-light btn-lg download-button" type="button"><i class="fa-brands fa-google-play"></i>Download</button> -->
+    <button class="btn btn-outline-light btn-lg tour" type="button"><i class="fa-brands fa-google-play"></i>Download</button>
+    </div>
+    
     <div class="slide">
       <ul class="nav justify-content-center">
         <li class="nav-item">
@@ -72,7 +75,7 @@
           <a class="nav-link" href="#">Emergency Ward</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Diagnostic Ward</a>
+          <a class="nav-link" href="#">Diagnostic Room</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Super Speciality Room</a>
@@ -191,15 +194,16 @@
       <div class="pricing-col col-lg-3 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3 class="price-heading">Basic Health Checkup Package</h3>
+            <h3 class="price-heading">Blood <br> Tests <br> Package</h3>
           </div>
           <div class="card-body">
-            <h2 class="price-text">₹ 250</h2>
+            <h2 class="price-text">₹ 1,000</h2>
+            <p>CBC</p>
             <p>Blood Sugar-Fasting</p>
-            <p>X-ray Chest</p>
-            <p>ECG</p>
-            <p>Ultrasound Study</p>
-            <p>Consultation</p>
+            <p>Lipid Profile</p>
+            <p>Serum Uric Acid</p>
+            <p>Liver Function Tests</p>
+            <p>Blood Urea</p>
           </div>
         </div>
         </div>
@@ -207,19 +211,19 @@
       <div class="pricing-col col-lg-3 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3 class="price-heading">Essential Blood Tests <br> Package</h3>
+            <h3 class="price-heading">Basic Health Checkup Package</h3>
           </div>
           <div class="card-body">
-            <h2 class="price-text">₹ 500</h2>
+            <h2 class="price-text">₹ 2,500</h2>
             <p>CBC</p>
             <p>Blood Sugar-Fasting</p>
-            <p>Lipid Profile</p>
-            <p>Serum Uric Acid</p>
-            <p>Liver Function Tests</p>
+            <p>X-ray Chest</p>
+            <p>ECG</p>
+            <p>Ultrasound Study</p>
+            <p>TSH</p>
           </div>
         </div>
         </div>
-
 
         <div class="pricing-col col-lg-3 col-md-6">
           <div class="card">
@@ -227,10 +231,11 @@
               <h3 class="price-heading">Complete Health Checkup Package</h3>
             </div>
             <div class="card-body">
-              <h2 class="price-text">₹ 750</h2>
+              <h2 class="price-text">₹ 5,000</h2>
               <p>PPBS</p>
               <p>TMT or Echo</p>
               <p>HbA1C</p>
+              <p>ECG</p>
               <p>Ultrasound Study</p>
               <p>Serum Creatinine</p>
             </div>
@@ -243,12 +248,13 @@
                 <h3 class="price-heading">Extented Health Checkup Package</h3>
               </div>
               <div class="card-body">
-                <h2 class="price-text">₹ 1000</h2>
+                <h2 class="price-text">₹ 5,500</h2>
                 <p>TSH, T3, T4</p>
                 <p>HCV</p>
                 <p>GGT</p>
                 <p>Vitamin B12</p>
                 <p>Total Vitamin D3</p>
+                <p>Complete Consultation</p>
               </div>
             </div>
             </div>
@@ -260,7 +266,7 @@
 
   <!-- Call to Action -->
 
-  <section class="coloured-section" id="cta">
+  <section class="white-section" id="cta">
 
     <div class="container-fluid">
       <h3 class="big-heading">Experience healthcare from the comfort of your own home with our virtual hospital.</h3>
@@ -301,7 +307,7 @@
 
   <!-- Footer -->
 
-  <footer class="white-section" id="footer">
+  <footer class="coloured-section" id="footer">
 
     <div class="container-fluid">
         <i class="fa-brands fa-twitter footer-logo"></i>
